some preliminary work for eq 2.14

--- a/papers/Thesis.tex
+++ b/papers/Thesis.tex
@@ -182,9 +182,9 @@ This brings me, finally, to my Mother and Father, whom I can not thank enough fo
 \mainmatter
 % \Include{Introduction}
 
-% \Include{Rashba}
+\Include{Rashba}
 % \Include{GdMn2O5}
-\Include{Cr}
+% \Include{Cr}
 
 % \Include{Softening}
 % \appendix
